plugins {
    id "fabric-loom" version "0.5-SNAPSHOT"
    id "maven-publish"
    id "maven"
}

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

archivesBaseName = project.archives_base_name
version = project.mod_version
group = project.maven_group

minecraft {
}

configurations {
    // configuration that holds jars to include in the jar
    extraLibs
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

    compileOnly "com.google.code.findbugs:jsr305:+"
    compileOnly "org.jetbrains:annotations:+"

    testImplementation "org.junit.jupiter:junit-jupiter:+"

    // concern
   // extraLibs files("${System.getProperty('java.home')}/../lib/tools.jar")
    // https://mvnrepository.com/artifact/net.bytebuddy/byte-buddy-agent
    extraLibs group: 'net.bytebuddy', name: 'byte-buddy-agent', version: '1.10.13'
    extraLibs "net.java.dev.jna:jna:5.3.1"
    extraLibs "net.java.dev.jna:jna-platform:5.3.1"

    configurations.compile.extendsFrom(configurations.extraLibs)
}

jar {
    from {
        configurations.extraLibs.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

processResources {
    inputs.property "version", project.version

    from(sourceSets.main.resources.srcDirs) {
        include "fabric.mod.json"
        expand "version": project.version
    }

    from(sourceSets.main.resources.srcDirs) {
        exclude "fabric.mod.json"
    }
}

// ensure that the encoding is set to UTF-8, no matter what the system default is
// this fixes some edge cases with special characters not displaying correctly
// see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}

// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
// if it is present.
// If you remove this task, sources will not be generated.
task sourcesJar(type: Jar, dependsOn: classes) {
    classifier = "sources"
    from sourceSets.main.allSource
}

jar {
    from "LICENSE"
}

// configure the maven publication
publishing {
    publications {
        mavenJava(MavenPublication) {
            // add all the jars that should be included when publishing to maven
            artifact(remapJar) {
                builtBy remapJar
            }
            artifact(sourcesJar) {
                builtBy remapSourcesJar
            }
        }
    }
    // select the repositories you want to publish to
    repositories {
        File gh = new File(projectDir.parentFile.parentFile, "util/Devan-Repo")
        System.out.println(gh)
        if (gh.exists()) {
            maven {
                url = gh.absolutePath
            }
        }
        // uncomment to publish to the local maven
        // mavenLocal()
    }
}
